--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,78 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+  
+  
+    --color-secondary:#FAB30A;
+    --color-secondary-shade:#00B871;
+    --color-secondary-tint:#36F46B;
+  
+    --color-white:#fff;
+    --color-white-shade:#EDF3FC;
+  }
+
+  /* If the user's system preference is dark */
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --color-primary:#1D4ED8;
+      --color-primary-shade:#000D60;
+      --color-primary-tint:#CCD3FC;
+      --color-primary:#1D4ED8;
+      --color-primary-shade:#000D60;
+      --color-primary-tint:#CCD3FC;
+    
+    
+      --color-secondary:#FAB30A;
+      --color-secondary-shade:#00B871;
+      --color-secondary-tint:#36F46B;
+    
+      --color-white:#fff;
+      --color-white-shade:#f2f6fc;
+    }
+  }
+  
+  /* If the user switchs dark mode */
+  :root[data-theme="dark"] {
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+  
+  
+    --color-secondary:#FAB30A;
+    --color-secondary-shade:#00B871;
+    --color-secondary-tint:#36F46B;
+  
+    --color-white:#fff;
+    --color-white-shade:#EDF3FC;
+  }
+
+  /* If the user switchs light mode */
+  :root[data-theme="light"] {
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+    --color-primary:#1D4ED8;
+    --color-primary-shade:#000D60;
+    --color-primary-tint:#CCD3FC;
+  
+  
+    --color-secondary:#FAB30A;
+    --color-secondary-shade:#00B871;
+    --color-secondary-tint:#36F46B;
+  
+    --color-white:#fff;
+    --color-white-shade:#EDF3FC;
+  }
+}
