--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
 
 @layer base {
   :root {
-    --color-primary:#1D4ED8;
+    --color-primary:#000;
     --color-primary-shade:#000D60;
     --color-primary-tint:#CCD3FC;
-    --color-primary:#1D4ED8;
+    --color-primary:#000;
     --color-primary-shade:#000D60;
     --color-primary-tint:#CCD3FC;
   
@@ -23,10 +23,10 @@
   /* If the user's system preference is dark */
   @media (prefers-color-scheme: dark) {
     :root {
-      --color-primary:#1D4ED8;
+      --color-primary:#000;
       --color-primary-shade:#000D60;
       --color-primary-tint:#CCD3FC;
-      --color-primary:#1D4ED8;
+      --color-primary:#000;
       --color-primary-shade:#000D60;
       --color-primary-tint:#CCD3FC;
     
@@ -36,13 +36,13 @@
       --color-secondary-tint:#36F46B;
     
       --color-white:#fff;
-      --color-white-shade:#f2f6fc;
+      --color-white-shade:#F2F2F2;
     }
   }
   
   /* If the user switchs dark mode */
   :root[data-theme="dark"] {
-    --color-primary:#1D4ED8;
+    --color-primary:#000;
     --color-primary-shade:#000D60;
     --color-primary-tint:#CCD3FC;
     --color-primary:#1D4ED8;
@@ -60,7 +60,7 @@
 
   /* If the user switchs light mode */
   :root[data-theme="light"] {
-    --color-primary:#1D4ED8;
+    --color-primary:#000;
     --color-primary-shade:#000D60;
     --color-primary-tint:#CCD3FC;
     --color-primary:#1D4ED8;
