sign in page update VI

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
   
     --color-secondary:#FAB30A;
     --color-secondary-shade:#00B871;
-    --color-secondary-tint:#36F46B;
+    --color-secondary-tint:#FFF7DE;
   
     --color-white:#fff;
     --color-white-shade:#EDF3FC;
@@ -72,7 +72,7 @@
   
     --color-secondary:#FAB30A;
     --color-secondary-shade:#00B871;
-    --color-secondary-tint:#36F46B;
+    --color-secondary-tint:#FFF7DE;
   
     --color-white:#fff;
     --color-white-shade:#EDF3FC;
